--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section id="title">
 
-    <div class="container-fluid">
+    <div class="container-fluid container-title">
 
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
@@ -51,6 +51,7 @@
       <!-- Title -->
 
       <div class="row">
+
         <div class="col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>          
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
@@ -70,15 +71,29 @@
   <!-- Features -->
 
   <section id="features">
+    <div class="container-fluid container-features">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+      <div class="row">
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+        <div class="feature-div col-lg-4">
+          <i class="icon fas fa-check-circle fa-4x"></i>
+          <h3 class="feature-heading">Easy to use.</h3>
+          <p class="feature-p">So easy to use, even your dog could do it.</p>
+        </div>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+        <div class="feature-div col-lg-4">
+          <i class="icon fas fa-bullseye fa-4x"></i>
+          <h3 class="feature-heading">Elite Clientele</h3>
+          <p class="feature-p">We have all the dogs, the greatest dogs.</p>
+        </div> 
+
+        <div class="feature-div col-lg-4">
+          <i class="icon fas fa-heart fa-4x"></i>
+          <h3 class="feature-heading">Guaranteed to work.</h3>
+          <p class="feature-p">Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
+    </div>
 
   </section>
 
