--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
+                <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -214,9 +214,10 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+      <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button class="btn btn-dark btn-lg download-button" type="button"><i class="fab fa-apple"></i> Download</button>
+      <button class="btn btn-outline-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
+    
 
   </section>
 
@@ -225,7 +226,15 @@
 
   <footer id="footer">
 
+    <a href="" target="_blank"><i class="sm-icon fab fa-twitter"></i></a>
+    <a href="" target="_blank"><i class="sm-icon fab fa-facebook-f"></i></a>
+    <a href="" target="_blank"><i class="sm-icon fab fa-instagram"></i></a>
+    <a href="mailto:webmaster@example.com"><i class="sm-icon fas fa-envelope"></i></a>
+
     <p>© Copyright 2018 TinDog</p>
+    <br>
+    <br>
+    <a class="top" href="#title">Top <i class="fas fa-chevron-up"></i></a>
 
   </footer>
 
